# acsfiles

./: Dev-LD.txt  README.md  RawArch  ToDo.org  acslinks.tar
binfiles/: CopySourceVersion  GetSource  InstallAurPackage  InstallObnam  InstallTerminalEmulators  LinkStartupFiles  MakeLinuxLinks  NewRust  PrintProjectBuildTime  RestoreState  Rip.acs  SaveAllVMs  SaveState  all_dirs  all_versions  amethyst  arch-pm  backup_all  bld  build_XEmacsen  buildall  cfg  check_cfg  check_latest_emacs  check_versions  check_zsh  checkout-and-build-xemacs-21.5-min  cleanup-xemacs  compare_system_times  cpdt  createVM  cvs-rw  daily.amethyst  daily.boise  daily.denver  daily.graycliff  debian-pm  diff-xemacs-tests  diff_output_files  diff_xemacs_build_results  (+106 more)
binfiles/NT/: BuildXEmacsKits  GetXEmacsPackages  InstallExtraXEmacsPackages  MakeComponentList  MakeComponentList.zsh  MakeCygwinXEmacs  MakeNativeXEmacs  MakeXEmacsWindowsKit  acs-backup  backup_cvs-srvr  copy_to_xemacs.org  cyg.cmd  cygwin_update.cmd  getPkgs  mk-XEmacs-from-scratch  mk-XEmacsWindowsKit  mk-xemacs-support-libs  update-packages  vcsetup  xemacs-21.4  xemacs-21.5  xemacs-merge  xssh
rcfiles/: .i3status.conf  ListOfLinks  Xresources  conky.common  conky.hostname  conky.status  conkyrc  cvsrc  emacs  emacs-init.el  gnus.el  i3config  i3status.conf  init-editing.el  init-elpa.el  init-fonts.el  init-miscellaneous.el  init-navigation.el  init-org.el  init-rust.el  init-ui.el  init-vc.el  testexa  zlogin  zlogout  zprofile  zshenv  zshrc
rcfiles/zsh/: .zlogout  .zshenv  .zshrc  README  build_environment  completion_definitions  cygwin_additions  cygwin_build_environment  environment_variables  function_definitions  home-zshenv  key_bindings  language_definitions  set_path  set_rcmap  shell_aliases  shell_behaviors
src/: config.h.in  configure.ac  make_base32_test  make_new_hello  make_new_hello2  makefile  t.c
src/base32_test/: Makefile.am  Makefile.in  aclocal.m4  base32_test.c  config.h.in  configure  configure.ac  gnulib-tool
src/base32_test/gl/: Makefile.am  Makefile.in
src/base32_test/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
src/t/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  debug_print.h  gnulib-tool  t.c
src/t/gl/: Makefile.am  Makefile.in  getcwd-lgpl.c  unistd.in.h
src/t/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
system/: BuildArchSystem.sh  BuildNuc.sh  Build_VM  MX_new.bash  README.USRLOCAL  README.first  README.system-setup  build-system  check_dirs  mx_setup1.bash  mx_setup2.bash  update-server
system/Fedora/: Microsoft_fonts  README.VM_Upgrade  README.conky  (+5 more)
webfiles/: acslinks.html
(+136 files in other folders)
